...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_image_guideline"
        app:layout_constraintTop_toBottomOf="@+id/currency_feed_item_view_currency_code"
        tools:text="Euro" />

    <EditText
        android:id="@+id/currency_feed_item_view_currency_input"
        style="@style/RecyclerView.Item.Input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/currency_input_margin_end"
        android:hint="@string/currency_amount_hint"
        android:importantForAutofill="no"
...
